--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.19",
+    "@heroicons/react": "^2.1.3",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "framer-motion": "^11.0.6",
